| Summary: | ASTERISK-29220: After T38 reinvite response of 488 a subsequent G711 reinvite is not processed correctly. Instead the previous T38 session media is used | ||
| Reporter: | Robert Cripps (bobcripps) | Labels: | fax |
| Date Opened: | 2020-12-22 02:35:07.000-0600 | Date Closed: | 2021-01-18 10:01:59.000-0600 |
| Priority: | Major | Regression? | Yes |
| Status: | Closed/Complete | Components: | Resources/res_pjsip_session |
| Versions: | 16.7.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Debian 8 & 9 | Attachments: | |
| Description: | A fax call is established negotiated to G711 pcmu. If A or B leg receives a T38 reinvite that is propagated correctly to the other leg. If the other leg responds with 488 that is again correctly propagated back to the T38 reinvite sender. However, if the T38 reinvite sender then sends a G711 reinvite, asterisk sends another T38 reinvite to the other leg.
The Asterisk 13 behavior was to 200 OK the subsequent G711 reinvite back to the sender. A patch for res_pjsip_session.c fixes this problem. It will follow in due course when I get my head around the process | ||
| Comments: | By: Asterisk Team (asteriskteam) 2020-12-22 02:35:08.993-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. Please note that log messages and other files should not be sent to the Sangoma Asterisk Team unless explicitly asked for. All files should be placed on this issue in a sanitized fashion as needed. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. Please note that by submitting data, code, or documentation to Sangoma through JIRA, you accept the Terms of Use present at [https://www.asterisk.org/terms-of-use/|https://www.asterisk.org/terms-of-use/]. By: Joshua C. Colp (jcolp) 2020-12-22 03:58:45.736-0600 Per comment, assigning to you for feedback as you stated you have a patch. By: Asterisk Team (asteriskteam) 2021-01-05 12:00:03.020-0600 Suspended due to lack of activity. This issue will be automatically re-opened if the reporter posts a comment. If you are not the reporter and would like this re-opened please create a new issue instead. If the new issue is related to this one a link will be created during the triage process. Further information on issue tracker usage can be found in the Asterisk Issue Guidlines [1]. [1] https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines By: Robert Cripps (bobcripps) 2021-01-06 01:12:04.966-0600 The patch is in Gerrit with a +1 sorry I wasn't aware I had to do more. I will be tackling the test code comments soon. By: Asterisk Team (asteriskteam) 2021-01-06 01:12:05.557-0600 This issue has been reopened as a result of your commenting on it as the reporter. It will be triaged once again as applicable. By: Friendly Automation (friendly-automation) 2021-01-18 10:02:00.393-0600 Change 15350 merged by Joshua Colp: res/res_pjsip_session.c: Check that media type matches in function ast_sip_session_media_state_add. [https://gerrit.asterisk.org/c/asterisk/+/15350|https://gerrit.asterisk.org/c/asterisk/+/15350] By: Friendly Automation (friendly-automation) 2021-01-18 11:17:13.195-0600 Change 15230 merged by Friendly Automation: res/res_pjsip_session.c: Check that media type matches in function ast_sip_session_media_state_add. [https://gerrit.asterisk.org/c/asterisk/+/15230|https://gerrit.asterisk.org/c/asterisk/+/15230] By: Friendly Automation (friendly-automation) 2021-01-18 11:32:33.869-0600 Change 15349 merged by Joshua Colp: res/res_pjsip_session.c: Check that media type matches in function ast_sip_session_media_state_add. [https://gerrit.asterisk.org/c/asterisk/+/15349|https://gerrit.asterisk.org/c/asterisk/+/15349] | ||